<resources>
    <string name="app_name">HerbScan</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="invalid_email">Gunakan format email</string>
    <string name="invalid_password">Kata sandi tidak boleh kurang dari 8 karakter</string>
    <string name="press_back_again">Tekan kembali lagi untuk keluar</string>
    <string name="empty_form">Silahkan isi kolom formulir terlebih dahulu</string>
    <string name="invalid_form">Silahkan isi semua kolom formulir sesuai dengan ketentuan</string>
    <string name="pass_not_match">Kata sandi tidak cocok</string>
    <string name="back">Kembali</string>
    <string name="cloud_background">Latar Belakang Awan</string>
    <string name="save">Simpan</string>
    <string name="illust_confirm_dialog">Ilustrasi Konfirmasi Dialog</string>
    <string name="success">Berhasil</string>
    <string name="changes_success">Perubahan berhasil</string>
    <string name="ok">Oke</string>
    <string name="plant_availability">Ketersediaan</string>
    <string name="recommendation_for">Rekomendasi untuk %1$s</string>
    <string name="loading">Loading...</string>
    <string name="illlust_empty">Ilustrasi tidak ada data</string>
    <string name="empty">Tidak ada data</string>

    <!-- Login -->
    <string name="login">Masuk</string>
    <string name="login_illust">Ilustrasi Masuk</string>
    <string name="login_desc">Hai, masuk untuk melanjutkan</string>
    <string name="remember_me">Ingat saya</string>
    <string name="forgot_pass">Lupa kata sandi?</string>
    <string name="dont_have_acc">Belum punya akun?</string>
    <string name="incorrect_login">Email atau kata sandi salah</string>

    <!-- Register -->
    <string name="register">Daftar</string>
    <string name="register_illust">Ilustrasi Daftar</string>
    <string name="register_desc">Buat akun untuk melanjutkan</string>
    <string name="first_name">Nama Depan</string>
    <string name="last_name">Nama Belakang</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="try_login">Daftar Sukses! Silakan coba login ke akun Anda</string>
    <string name="email_registered">Email sudah terdaftar. Silakan gunakan email lain.</string>

    <!-- Forgot Pass -->
    <string name="forgot_pass_title">Ubah Kata Sandi</string>
    <string name="forgot_pass_illust">Ilustrasi Lupa Kata Sandi</string>
    <string name="forgot_pass_desc">Masukkan email untuk melanjutkan</string>
    <string name="send">Kirim</string>
    <string name="remember_pass">Ingat kata sandi Anda?</string>
    <string name="send_success">Ubah kata sandi berhasil dikirim ke email yang terdaftar</string>

    <!-- Item -->
    <string name="image_plant">Gambar Tanaman</string>
    <string name="plant_name">Nama Tanaman</string>
    <string name="plant_scientific_name">Nama Ilmiah Tanaman</string>
    <string name="icon_recommend">Ikon Rekomendasi</string>
    <string name="tv_recommend">Rekomendasi untuk sakit perut</string>

    <!-- Home -->
    <string name="home">Beranda</string>
    <string name="welcome">Selamat Datang,</string>
    <string name="user_firstname">Nama Pengguna</string>
    <string name="icon_search">Ikon Cari</string>
    <string name="category">Kategori</string>
    <string name="all">Semua</string>
    <string name="leaf">Daun</string>
    <string name="fruit">Buah</string>
    <string name="root">Akar</string>
    <string name="search">Pencarian</string>
    <string name="no_found">Tidak ditemukan</string>

    <!-- Detail -->
    <string name="detail">Detail</string>
    <string name="detail_background">Latar Belakang Detail</string>
    <string name="icon_fav">Ikon Favorit</string>
    <string name="icon_unfav">Ikon Tidak Favorit</string>
    <string name="availability">Ketersediaan</string>
    <string name="habitat">Habitat</string>
    <string name="last_discussion">Terakhir 1 jam lalu</string>
    <string name="plant_habitat">Habitat Tanaman</string>
    <string name="biodata">Biodata</string>
    <string name="description">Deskripsi</string>
    <string name="rating">Ulasan</string>
    <string name="benefit">Manfaat</string>
    <string name="how_to_use">Cara Penggunaan</string>
    <string name="side_effect">Efek Samping</string>
    <string name="discussion">Diskusi</string>
    <string name="asking_for_rating">Ingin menambahkan ulasan?</string>
    <string name="add_rating">Tambah Ulasan</string>
    <string name="rating_number">5.0</string>


    <!-- Rating -->
    <string name="rating_plant">Nilai Tanaman</string>
    <string name="short_rating">Ulasan Singkat</string>
    <string name="rating_from">Diulas oleh %1$d orang</string>
    <string name="icon_star">Ikon Bintang</string>
    <string name="add_rating_2">Tambahkan Ulasan</string>
    <string name="add_photo">Tambahkan Foto (Opsional)</string>
    <string name="photo_rating">Foto Ulasan</string>

    <!-- Discussion -->
    <string name="discussion_plant">Diskusi (%1$s)</string>
    <string name="title_discussion">Judul Diskusi</string>
    <string name="chat">Tanaman ini apakah bisa digunakan untuk mengobat sakit kepala?</string>
    <string name="hint_discussion">Tambahkan obrolan</string>
    <string name="icon_reply">Ikon Balasan</string>
    <string name="look_discussion">Lihat Diskusi</string>
    <string name="no_discussion">Tidak ada diskusi</string>
    <string name="many_discussion">Terdapat %1$d diskusi</string>

    <!-- Chat -->
    <string name="add_discussion">Tambahkan Diskusi</string>
    <string name="icon_remove">Ikon Hapus</string>
    <string name="confirm_delete">Apakah Anda yakin ingin\n menghapus diskusi ini?</string>
    <string name="icon_send_message">Ikon Kirim Pesan</string>
    <string name="time_1">2 jam lalu</string>
    <string name="yes">Iya</string>
    <string name="no">Tidak</string>

    <!-- Camera -->
    <string name="camera">Kamera</string>
    <string name="icon_info">Ikon Info</string>
    <string name="illust_info_camera">Ilustrasi Info Kamera</string>
    <string name="point_the_camera">Arahkan kamera ke\ntanaman di depanmu</string>
    <string name="detail_info_camera">Kami akan memberikan\ninformasi mengenai detail\ndari tanaman tersebut</string>

    <!-- Setting Camera -->
    <string name="setting_camera">Pengaturan Kamera</string>
    <string name="clahe">Tingkatkan Kontras Gambar</string>
    <string name="desc_clahe">*Membantu gambar terlihat lebih jelas dengan meningkatkan perbedaan warna</string>
    <string name="color_conversion">Sesuaikan Warna Gambar</string>
    <string name="desc_color_conversion">*Mengubah warna agar sistem lebih mudah mengenali tanaman</string>
    <string name="data_augmentation">Aktifkan Perbaikan Gambar Otomatis</string>
    <string name="desc_data_augmentation">*Membalik dan mencerahkan gambar secara otomatis untuk akurasi lebih baik</string>

    <!-- Result -->
    <string name="result">Hasil</string>
    <string name="percentage">90%</string>
    <string name="accuracy">Akurasi</string>
    <string name="arrow_detail">Arah panah detail</string>
    <string name="one_hundred_percent">100%</string>
    <string name="accurate">Hasil klasifikasi ini cukup akurat dan dapat dipercaya</string>
    <string name="not_acurate">Hasil klasifikasi belum pasti, coba ambil gambar yang lebih jelas</string>

    <!-- Profile -->
    <string name="profile">Profil</string>
    <string name="bubble_background">Latar Belakang Gelembung</string>
    <string name="user_fullname">Nama Lengkap Pengguna</string>
    <string name="user_email">Email Pengguna</string>
    <string name="divider">Pemisah</string>
    <string name="next">Selanjutnya</string>
    <string name="change_profile">Ubah Profil</string>
    <string name="history">Riwayat</string>
    <string name="favorite">Favorit</string>
    <string name="language">Bahasa</string>
    <string name="logout">Keluar</string>

    <!-- Edit Profile -->
    <string name="edit_profile">Ubah Profil</string>
    <string name="icon_edit_profile">Ikon Ubah Profil</string>
    <string name="cancel">Batal</string>
    <string name="icon_capture_camera">Ikon Tangkap Kamera</string>
    <string name="icon_rotate_camera">Ikon Beralih Kamera</string>
    <string name="icon_close">Ikon Tutup</string>
    <string name="icon_edit_camera">Ikon Ubah Kamera</string>
    <string name="take_photo">Ambil Foto</string>
    <string name="icon_gallery">Ikon Galeri</string>
    <string name="choose_gallery">Pilih dari galeri</string>
    <string name="icon_delete">Ikon Hapus</string>
    <string name="delete_photo">Hapus foto</string>

    <!-- Change Password -->
    <string name="change_password">Ubah Kata Sandi</string>
    <string name="will_send">*Anda akan menerima email untuk mengubah kata sandi Anda</string>
    <string name="success_send">Permintaan perubahan kata sandi telah dikirim ke email yang terdaftar</string>

    <!-- History -->
    <string name="plant_date">Selasa, 3 Desember 2024 (12.15)</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>