<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.tab.BiodataFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingHorizontal="30dp">

        <TextView
            style="@style/TextAppearance.AppCompat.TextSm.Semibold"
            android:layout_width="wrap_content"
            android:text="@string/plant_scientific_name"
            android:textColor="@color/shades_100" />

        <TextView
            android:id="@+id/tv_scientific_name"
            style="@style/TextAppearance.AppCompat.TextXs.Medium"
            android:layout_width="wrap_content"
            android:text="@string/plant_scientific_name"
            android:textColor="@color/shades_100"
            android:layout_marginTop="2dp" />

        <TextView
            style="@style/TextAppearance.AppCompat.TextSm.Semibold"
            android:layout_width="wrap_content"
            android:text="@string/availability"
            android:textColor="@color/shades_100"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_availability"
            style="@style/TextAppearance.AppCompat.TextXs.Medium"
            android:layout_width="wrap_content"
            android:text="@string/plant_availability"
            android:textColor="@color/shades_100"
            android:layout_marginTop="2dp" />

        <TextView
            style="@style/TextAppearance.AppCompat.TextSm.Semibold"
            android:layout_width="wrap_content"
            android:text="@string/habitat"
            android:textColor="@color/shades_100"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_habitat"
            style="@style/TextAppearance.AppCompat.TextXs.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plant_habitat"
            android:textColor="@color/shades_100"
            android:scrollbars="vertical"
            android:layout_marginTop="2dp" />
    </LinearLayout>
</ScrollView>