<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.tab.DescriptionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingHorizontal="30dp">

        <LinearLayout
            android:id="@+id/layout_recommend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/outlined_recommendation"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="15dp"
            android:layout_marginBottom="20dp"
            android:paddingVertical="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_recommend"
                android:contentDescription="@string/icon_recommend" />

            <TextView
                android:id="@+id/tv_recommend"
                style="@style/TextAppearance.AppCompat.TextXs.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_recommend"
                android:textColor="@color/neutral_500"
                android:layout_marginStart="5dp" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.AppCompat.TextSm.Semibold"
                    android:layout_width="wrap_content"
                    android:text="@string/short_rating"
                    android:textColor="@color/shades_100" />

                <TextView
                    style="@style/TextAppearance.AppCompat.TextXs.Medium"
                    android:layout_width="wrap_content"
                    android:text="@string/rating_from"
                    android:textColor="@color/shades_100"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center|end">

                <TextView
                    android:id="@+id/tv_avg_rating"
                    style="@style/TextAppearance.AppCompat.TextXs.Medium"
                    android:layout_width="wrap_content"
                    android:text="@string/rating_number"
                    android:textColor="@color/primary_900" />
                
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_star_filled"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/icon_star" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_benefit"
            style="@style/TextAppearance.AppCompat.TextSm.Semibold"
            android:layout_width="wrap_content"
            android:text="@string/benefit"
            android:layout_marginTop="15dp"
            android:textColor="@color/shades_100" />

        <TextView
            android:id="@+id/tv_plant_benefit"
            style="@style/TextAppearance.AppCompat.TextXs.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/benefit"
            android:textColor="@color/shades_100"
            android:layout_marginTop="2dp" />

        <TextView
            style="@style/TextAppearance.AppCompat.TextSm.Semibold"
            android:layout_width="wrap_content"
            android:text="@string/how_to_use"
            android:textColor="@color/shades_100" />

        <TextView
            android:id="@+id/tv_plant_how_to_use"
            style="@style/TextAppearance.AppCompat.TextXs.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_use"
            android:textColor="@color/shades_100"
            android:layout_marginTop="2dp" />

        <TextView
            style="@style/TextAppearance.AppCompat.TextSm.Semibold"
            android:layout_width="wrap_content"
            android:text="@string/side_effect"
            android:textColor="@color/shades_100" />

        <TextView
            android:id="@+id/tv_side_effect"
            style="@style/TextAppearance.AppCompat.TextXs.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/side_effect"
            android:textColor="@color/shades_100"
            android:scrollbars="vertical"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</ScrollView>