<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginBottom="15dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_plant_name"
            style="@style/TextAppearance.AppCompat.TextSm.Semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plant_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_plant_scientific_name"
            style="@style/TextAppearance.AppCompat.TextXxs.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plant_scientific_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_plant_name" />

        <TextView
            android:id="@+id/tv_date"
            style="@style/TextAppearance.AppCompat.TextXxs.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plant_date"
            android:textColor="@color/neutral_500"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_plant_scientific_name"
            app:layout_constraintBottom_toBottomOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_accuracy"
                style="@style/TextAppearance.AppCompat.DisplayXs.Semibold"
                android:layout_width="wrap_content"
                android:text="@string/one_hundred_percent" />

            <TextView
                style="@style/TextAppearance.AppCompat.TextXxs.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accuracy" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>