<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_plant"
            android:layout_width="145dp"
            android:layout_height="80dp"
            android:src="@drawable/kemangi"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_plant"
            app:shapeAppearanceOverlay="@style/roundImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_plant_name"
            style="@style/TextAppearance.AppCompat.TextSm.Semibold"
            android:layout_width="wrap_content"
            android:text="@string/plant_name"
            android:textColor="@color/shades_100"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/iv_plant"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_plant_scientific_name"
            style="@style/TextAppearance.AppCompat.TextXxs.Regular"
            android:layout_width="wrap_content"
            android:text="@string/plant_scientific_name"
            android:textColor="@color/neutral_500"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@id/tv_plant_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/layout_recommend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/outlined_recommendation"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_plant_scientific_name"
            app:layout_constraintStart_toStartOf="@id/iv_plant"
            app:layout_constraintEnd_toEndOf="@id/iv_plant">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:src="@drawable/ic_recommend"
                android:contentDescription="@string/icon_recommend" />

            <TextView
                android:id="@+id/tv_recommend"
                style="@style/TextAppearance.AppCompat.TextXxxs.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommendation_for"
                android:textColor="@color/neutral_500"
                android:layout_marginStart="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_availability"
            style="@style/TextAppearance.AppCompat.TextXxs.Regular"
            android:layout_width="match_parent"
            android:text="@string/plant_availability"
            android:textColor="@color/success_900"
            android:gravity="end"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/layout_recommend"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>