<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shades_50"
    tools:context=".ui.auth.forgotpass.ForgotPassActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingHorizontal="20dp">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_login_illust"
            android:layout_width="330dp"
            android:layout_height="240dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/login_illust"
            android:src="@drawable/illust_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_forgot_pass"
            style="@style/TextAppearance.AppCompat.DisplayXs.Semibold"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_pass_title"
            android:textColor="@color/primary_900"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_login_illust" />

        <TextView
            android:id="@+id/tv_forgot_pass_desc"
            style="@style/TextAppearance.AppCompat.TextSm.Medium"
            android:layout_width="wrap_content"
            android:text="@string/forgot_pass_desc"
            android:textColor="@color/neutral_700"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pass" />

        <TextView
            android:id="@+id/tv_email"
            style="@style/TextAppearance.AppCompat.TextSm.Medium"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="@+id/tv_forgot_pass"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pass_desc" />

        <com.example.herbscan.ui.custom.EmailEditText
            android:id="@+id/et_forgot_pass_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/outlined_edit_text"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/custom_button"
            android:text="@string/send"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/et_forgot_pass_email"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/tv_dont_have_acc"
            style="@style/TextAppearance.AppCompat.TextXs.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/remember_pass"
            android:textColor="@color/neutral_900"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_login"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_send" />

        <TextView
            android:id="@+id/tv_login"
            style="@style/TextAppearance.AppCompat.TextXs.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/primary_900"
            android:layout_marginStart="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_dont_have_acc"
            app:layout_constraintTop_toTopOf="@+id/tv_dont_have_acc" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>