<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_700"
    tools:context=".ui.camera.result.ResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="35dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_plant"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/image_plant"
            android:scaleType="centerCrop"
            android:src="@drawable/illust_info_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_back"
            app:shapeAppearance="@style/resultRoundImage" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@drawable/result_container"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="@id/iv_plant"
            app:layout_constraintStart_toStartOf="@id/iv_plant"
            app:layout_constraintTop_toBottomOf="@id/iv_plant">

            <TextView
                android:id="@+id/tv_plant_name"
                style="@style/TextAppearance.AppCompat.TextXl.Medium"
                android:layout_width="wrap_content"
                android:text="@string/plant_name"
                android:textColor="@color/shades_50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_plant_scientific_name"
                style="@style/TextAppearance.AppCompat.TextSm.Medium"
                android:layout_width="wrap_content"
                android:text="@string/plant_scientific_name"
                android:textColor="@color/shades_50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_plant_name" />

            <LinearLayout
                android:id="@+id/layout_go_to_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/tv_detail"
                    style="@style/TextAppearance.AppCompat.TextSm.Medium"
                    android:layout_width="wrap_content"
                    android:text="@string/detail"
                    android:textColor="@color/shades_50" />
                
                <ImageView
                    android:layout_width="8dp"
                    android:layout_height="14dp"
                    android:src="@drawable/ic_point_detail"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/arrow_detail" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>