<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/shades_50"
    android:paddingHorizontal="15dp"
    android:paddingTop="15dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile_pic"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:src="@drawable/profile_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/TextAppearance.AppCompat.TextXxs.Semibold"
        android:layout_width="wrap_content"
        android:text="@string/user_fullname"
        android:layout_marginStart="10dp"
        android:textColor="@color/neutral_500"
        app:layout_constraintStart_toEndOf="@+id/iv_profile_pic"
        app:layout_constraintTop_toTopOf="@id/iv_profile_pic"
        app:layout_constraintBottom_toBottomOf="@id/iv_profile_pic" />

    <TextView
        android:id="@+id/tv_chat"
        style="@style/TextAppearance.AppCompat.TextXs.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_profile_pic" />

    <TextView
        android:id="@+id/tv_time"
        style="@style/TextAppearance.AppCompat.TextXxs.Regular"
        android:layout_width="wrap_content"
        android:text="@string/time_1"
        android:textColor="@color/neutral_500"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_chat"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>